kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-demo-svc
spec:
  selector:
    app: go-demo
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
