kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-demo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "jcostabe.evilcorp.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: go-demo-svc
            port:
              number: 8080
